modified upgrade in API to accept panelid instead of mac (which is unknown for frontend)
